fixes layout issues

--- a/src/components/pages/Coaching.scss
+++ b/src/components/pages/Coaching.scss
@@ -1,9 +1,9 @@
-$primary-color: #7E001B;
-$secondary-color: #b59646;
-$background-pink: #FFCCD1;
+$dark-pink: #7E001B;
+$gold: #b59646;
+$light-pink: #FFCCD1;
 
 .coaching-page {
-  color: $primary-color;
+  color: $dark-pink;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +12,7 @@ $background-pink: #FFCCD1;
   h1 {
     font-size: 50px;
     margin: 0 0 60px;
-    color: $secondary-color;
+    color: $gold;
     text-align: center;
   }
 
@@ -48,7 +48,28 @@ $background-pink: #FFCCD1;
   }
 
   #top-section {
-    padding: 0 30px 20px 0;
+    padding: 0;
+
+    .content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+
+      img {
+        width: 50%;
+        height: 100vh;
+        object-fit: cover;
+      }
+
+      .content-text {
+        width: 50%;
+        padding: 0 50px;
+        box-sizing: border-box;
+      }
+    }
   }
 
   .pink-background {
@@ -56,7 +77,7 @@ $background-pink: #FFCCD1;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $background-pink;
+    background-color: $light-pink;
     padding: 0 150px 70px;
     width: 100%;
     height: 100vh;
@@ -81,6 +102,11 @@ $background-pink: #FFCCD1;
     font-size: 30px;
     text-align: center;
   }
+
+  .inner-content {
+    width: 100%;
+    max-width: 1000px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -90,6 +116,16 @@ $background-pink: #FFCCD1;
     h3 { font-size: 30px; margin-top: 50px; }
     p { font-size: 22px; }
     ul { font-size: 18px; }
+
+    #top-section {
+      .content {
+        img {
+          height: auto;
+          min-height: 60vh;
+        }
+      }
+    }
+
     .pink-background, .white-background {
       padding: 0 50px 50px;
       height: auto;
@@ -105,7 +141,28 @@ $background-pink: #FFCCD1;
     h3 { font-size: 24px; margin-top: 40px; }
     p { font-size: 18px; }
     ul { font-size: 16px; }
-    #top-section { padding: 0 15px 10px; }
-    .pink-background, .white-background { padding: 0 20px 40px; }
+
+    #top-section {
+      padding: 0;
+
+      .content {
+        flex-direction: column;
+
+        img {
+          width: 100%;
+          height: auto;
+          min-height: 40vh;
+        }
+
+        .content-text {
+          width: 100%;
+          padding: 20px;
+        }
+      }
+    }
+
+    .pink-background, .white-background {
+      padding: 0 20px 40px;
+    }
   }
 }
