--- a/src/components/pages/Yoga.scss
+++ b/src/components/pages/Yoga.scss
@@ -77,7 +77,7 @@ $gold: #b59646;
 
         .suitability {
           margin-top: 40px;
-          color: $light-pink;
+          color: $dark-pink;
           font-weight: bold;
         }
       }
